--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "This is a bidding App API done with Node.js, Express, and Postgrss_DB.",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "build": "npx babel -d ./build ./src -s",
+    "dev": "nodemon --exec babel-node src/app.js",
+    "prestart": "npm run build",
+    "start": "node ./build/app.js"
   },
   "repository": {
     "type": "git",
