--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "app.js",
   "scripts": {
     "build": "npx babel -d ./build ./src -s",
+    "migrate": "npx sequelize db:migrate",
+    "undo-migrate": "npx sequelize db:migrate:undo:all",
+    "heroku-postbuild": "npm run migrate",
     "dev": "nodemon --exec babel-node src/app.js",
     "prestart": "npm run build",
     "start": "node ./build/app.js"
